# text-to-sql

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/commands/: fix-bug.md
.claude/rules/: api-mcp-standards.md  code-review.md  coding-python.md  git-workflow.md
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/components/: health-dot.tsx
frontend/src/components/approval/: approval-dialog.tsx
frontend/src/components/chat/: chat-input.tsx  chat-page.tsx  message-bubble.tsx  message-list.tsx
frontend/src/components/pipeline/: pipeline-stepper.tsx  step-detail.tsx
frontend/src/components/results/: answer-card.tsx  data-table.tsx  report-card.tsx  result-chart.tsx  source-tables.tsx  sql-accordion.tsx
frontend/src/components/session/: schema-browser.tsx  session-sidebar.tsx
frontend/src/components/ui/: query-type-badge.tsx
frontend/src/hooks/: use-chat.ts  use-schema.ts  use-session.ts  use-sse-stream.ts
frontend/src/lib/: api.ts  constants.ts  export.ts  quick-questions.ts  shiki.ts  types.ts
src/text_to_sql/: __init__.py  app.py  config.py  logging.py
src/text_to_sql/api/: approve.py  cache.py  conversation.py  health.py  history.py  query.py  rate_limit.py  router.py  schema.py
src/text_to_sql/cache/: query_cache.py
src/text_to_sql/db/: base.py  bigquery.py  factory.py  postgres.py  sqlite.py
src/text_to_sql/llm/: prompts.py  retry.py  router.py  sql_generator.py  tokens.py
src/text_to_sql/mcp/: tools.py
src/text_to_sql/models/: domain.py  requests.py  responses.py
src/text_to_sql/observability/: metrics.py
src/text_to_sql/pipeline/: approval.py  graph.py  orchestrator.py  tools.py  validators.py
src/text_to_sql/schema/: cache.py  discovery.py  selector.py
src/text_to_sql/store/: base.py  factory.py  memory.py  session.py  sqlite_session_store.py  sqlite_store.py
tests/: conftest.py
tests/integration/: test_analytical_pipeline.py  test_api_approve.py  test_api_history.py  test_api_query.py  test_conversation.py  test_mcp_tools.py
tests/unit/: test_analysis_validator.py  test_approval.py  test_classifier.py  test_config.py  test_executor.py  test_graph.py  test_models.py  test_orchestrator.py  test_planner.py  test_query_cache.py  test_rate_limiter.py  test_result_validator.py  test_retry.py  test_schema_cache.py  test_schema_discovery.py  test_schema_filtering.py  test_schema_selector.py  test_session_store.py  test_sql_generator.py  test_sql_validation.py  test_sqlite_store.py  test_tokens.py
(+8 files in other folders)
