[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "text-to-sql"
version = "0.1.0"
description = "Text-to-SQL pipeline with multi-provider LLM support, MCP tools, and human-in-the-loop approval"
requires-python = ">=3.13"
license = "MIT"
dependencies = [
    "fastapi>=0.129.0",
    "uvicorn[standard]>=0.40.0",
    "fastmcp>=2.0.0",
    "langchain>=1.2.10",
    "langchain-core>=1.2.12",
    "langchain-anthropic>=1.0.0",
    "langchain-google-genai>=4.2.0",
    "langchain-openai>=1.1.0",
    "langgraph>=1.0.8",
    "langgraph-checkpoint>=4.0.0",
    "google-cloud-bigquery>=3.40.1",
    "sqlalchemy[asyncio]>=2.0.46",
    "asyncpg>=0.31.0",
    "aiosqlite>=0.22.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.0",
    "structlog>=25.5.0",
    "rich>=14.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.1.0",
    "httpx>=0.28.1",
    "coverage>=7.13.0",
    "ruff>=0.15.0",
    "mypy>=1.19.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/text_to_sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.mypy]
python_version = "3.13"
strict = true
